labour/test/invalid/rule_14_violation.labour
bouldering_wall "Wall14" {
  routes [ bouldering_route "Route1" { grade: "5A", grid_base_point { x: 0, y: 0 }, holds ["0001", "0002"] } ],
  volumes [ circle { pos: { x: 0, y: 0 }, depth: 10, radius: 50, front_holds [
    hold "0001" { pos: { x: 0, y: 0 }, shape: "1", rotation: -45, colours [white] },
    hold "0002" { pos: { x: 10, y: 10 }, shape: "2", colours [white] }
  ] } ]
}